--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sd-0x-project-frontend-online-store",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.5.0",
